add "Points" entity
