# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  models.Point:
+    properties:
+      id:
+        example: 1
+        type: integer
+      location:
+        example: 69.164529, 35.138287
+        type: string
+      name:
+        example: Teriberka
+        type: string
+    type: object
   models.User:
     properties:
       email:
@@ -11,6 +23,9 @@ definitions:
       name:
         example: Alex
         type: string
+      password:
+        example: password
+        type: string
     type: object
 host: localhost:8081
 info:
@@ -18,24 +33,11 @@ info:
   title: Travel Planner
   version: "1.0"
 paths:
-  /:
-    get:
-      description: Проверка работоспособности API
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Hi
-          schema:
-            type: string
-      summary: Hello endpoint
-  /users:
+  /points:
     delete:
-      consumes:
-      - application/json
-      description: Удалить пользователя по ID
+      description: Удаление точки по ID
       parameters:
-      - description: User ID
+      - description: ID точки
         in: query
         name: id
         required: true
@@ -44,25 +46,22 @@ paths:
       - application/json
       responses:
         "204":
-          description: User deleted
-          schema:
-            type: string
+          description: Точка удалена
         "400":
-          description: Invalid user ID
+          description: Неверный ID
           schema:
             type: string
         "404":
-          description: User not found
+          description: Точка не найдена
           schema:
             type: string
-      summary: Delete user by ID
+      summary: Удалить точку
+      tags:
+      - Points
     get:
-      consumes:
-      - application/json
-      description: Получить пользователя по ID. Если id не передан, получить всех
-        пользователей.
+      description: Получить все точки или конкретную точку по ID
       parameters:
-      - description: User ID
+      - description: ID точки
         in: query
         name: id
         type: integer
@@ -70,58 +69,154 @@ paths:
       - application/json
       responses:
         "200":
-          description: Success
+          description: Успешный ответ для одной точки
           schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
+            $ref: '#/definitions/models.Point'
+        "400":
+          description: Неверный ID
+          schema:
+            type: string
         "404":
-          description: User not found
+          description: Точка не найдена
           schema:
             type: string
-        "409":
-          description: Error fetching users
-          schema:
-            type: string
-      summary: Get user by ID
+      summary: Получить точку/точки
+      tags:
+      - Points
     patch:
       consumes:
       - application/json
-      description: Обновить данные пользователя по ID
+      description: Частичное или полное обновление данных точки
       parameters:
-      - description: User ID
+      - description: ID точки
         in: query
         name: id
         required: true
         type: integer
-      - description: User object
+      - description: Обновленные данные
         in: body
-        name: user
+        name: point
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.Point'
       produces:
       - application/json
       responses:
         "200":
-          description: Updated user
+          description: Обновленная точка
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.Point'
         "400":
-          description: Invalid input
+          description: Неверные данные
           schema:
             type: string
         "404":
-          description: User not found
+          description: Точка не найдена
           schema:
             type: string
-      summary: Update user by ID
+        "409":
+          description: Конфликт данных
+          schema:
+            type: string
+      summary: Обновить точку
+      tags:
+      - Points
     post:
       consumes:
       - application/json
-      description: Создать нового пользователя
+      description: Добавление новой географической точки
       parameters:
-      - description: User object
+      - description: Данные точки
+        in: body
+        name: point
+        required: true
+        schema:
+          $ref: '#/definitions/models.Point'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Созданная точка
+          schema:
+            $ref: '#/definitions/models.Point'
+        "400":
+          description: Неверный формат данных
+          schema:
+            type: string
+        "409":
+          description: Конфликт данных
+          schema:
+            type: string
+      summary: Создать новую точку
+      tags:
+      - Points
+  /users:
+    delete:
+      description: Удаление пользователя по ID
+      parameters:
+      - description: ID пользователя
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Пользователь удален
+        "400":
+          description: Некорректный ID
+          schema:
+            type: string
+        "404":
+          description: Пользователь не найден
+          schema:
+            type: string
+      summary: Удалить пользователя
+      tags:
+      - Users
+    get:
+      description: Возвращает конкретного пользователя по ID или всех пользователей,
+        если ID не указан
+      parameters:
+      - description: ID пользователя
+        in: query
+        name: id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Данные пользователя
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Некорректный ID
+          schema:
+            type: string
+        "404":
+          description: Пользователь не найден
+          schema:
+            type: string
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            type: string
+      summary: Получить пользователя/пользователей
+      tags:
+      - Users
+    patch:
+      consumes:
+      - application/json
+      description: Частичное обновление данных пользователя. Пароль будет автоматически
+        хеширован.
+      parameters:
+      - description: ID пользователя
+        in: query
+        name: id
+        required: true
+        type: integer
+      - description: Обновляемые данные
         in: body
         name: user
         required: true
@@ -131,16 +226,55 @@ paths:
       - application/json
       responses:
         "200":
-          description: Created user
+          description: Обновленные данные
           schema:
             $ref: '#/definitions/models.User'
         "400":
-          description: Invalid input
+          description: Некорректные данные
+          schema:
+            type: string
+        "404":
+          description: Пользователь не найден
           schema:
             type: string
         "409":
-          description: User already exists
+          description: Конфликт данных
           schema:
             type: string
-      summary: Create a new user
+      summary: Обновить пользователя
+      tags:
+      - Users
+    post:
+      consumes:
+      - application/json
+      description: Регистрация нового пользователя в системе
+      parameters:
+      - description: Данные пользователя
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Созданный пользователь
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Некорректные входные данные
+          schema:
+            type: string
+        "409":
+          description: Пользователь уже существует
+          schema:
+            type: string
+        "500":
+          description: Ошибка хеширования пароля
+          schema:
+            type: string
+      summary: Создать пользователя
+      tags:
+      - Users
 swagger: "2.0"
