# internal/models/models.go
@@ -1,9 +1,10 @@
 package models
 
 type User struct {
-	ID    int    `json:"id" example:"1"`
-	Name  string `json:"name" example:"Alex"`
-	Email string `json:"email" example:"alex@example.com"`
+	ID       int    `json:"id" example:"1"`
+	Name     string `json:"name" example:"Alex"`
+	Email    string `json:"email" example:"alex@example.com"`
+	Password string `json:"password" example:"password"`
 }
 
 type Car struct {
@@ -21,24 +22,28 @@ type Expedition struct {
 }
 
 type Point struct {
-	ID    int    `json:"id" example:"1"`
-	Name  string `json:"name" example:"Gas Station"`
-	Place string `json:"place" example:"Karelia, Russia"`
+	ID       int    `json:"id" example:"1"`
+	Name     string `json:"name" example:"Teriberka"`
+	Location string `json:"location" example:"69.164529, 35.138287"`
 }
 
 type Crew struct {
 	ID           int   `json:"id" example:"1"`
 	CarID        int   `json:"carID" example:"13"`
-	MembersID    []int `json:"membersID" example:"1,2"`
 	ExpeditionID int   `json:"expeditionID" example:"1"`
+	MembersID    []int `json:"membersID" example:"1,2"`
+	EquipmentID  []int `json:"equipmentID" example:"1,2"`
+	GoodID       []int `json:"goodID" example:"1,2"`
 }
 
 type Equipment struct {
-	ID   int    `json:"id" example:"1"`
-	Name string `json:"name" example:"GPS Navigator"`
+	ID           int    `json:"id" example:"1"`
+	Name         string `json:"name" example:"GPS Navigator"`
+	ExpeditionID int    `json:"expeditionID" example:"1"`
 }
 
 type Good struct {
-	ID   int    `json:"id" example:"1"`
-	Name string `json:"name" example:"First Aid Kit"`
+	ID           int    `json:"id" example:"1"`
+	Name         string `json:"name" example:"First Aid Kit"`
+	ExpeditionID int    `json:"expeditionID" example:"1"`
 }
